--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
+@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+
 .App {
-  text-align: center;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #2f74c0;
+	font-family: "Neucha", cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.heading {
+	text-transform: uppercase;
+	font-size: 40px;
+	margin: 30px 0;
+	color: white;
+	z-index: 1;
+	text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@media (max-width: 800px) {
+	.heading {
+		margin: 15px 0;
+		font-size: 35px;
+	}
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.input {
+	display: flex;
+	width: 90%;
+	position: relative;
+	align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.input-box{
+	width: 100%;
+	border-radius: 50px;
+	padding: 20px 30px;
+	font-size: 25;
+	border: none;
+	transition: 0.2s;
+	box-shadow: inset 0 0 5px black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-box:focus {
+	box-shadow: 0 0 10px 1000px rgba(0,0,0, 0.5);
+	outline: none;
+}
+
+.input-submit{
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	margin: 12px;
+	border-radius: 40px;
+	right: 0px;
+	border: none;
+	font-size: 15px;
+	background-color: #2f74c0;
+	color: white;
+	transition: 0.2 all;
+	box-shadow: 0 0 5px black;
+}
+.input-submit:hover {
+	background-color: #388ae2;
+}
+
+.input-submit:active {
+	transform: scale(0.8);
+	box-shadow: 0 0 5px black;
+}
+
+.todos {
+	display: flex;
+	justify-content: space-evenly;
+	width: 90%;
+	flex-wrap: wrap;
+}
+
+.todos-single {
+	display: flex;
+	width: 29.5%;
+	border-radius: 5px;
+	padding: 20px;
+	margin-top: 15px;
+	background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+}
+
+.todos-single-text {
+	flex: 1;
+	padding: 5px;
+	border: none;
+	font-size: 20px;
+}
+
+.todos-single-text:focus {
+	outline: none;
+}
+
+.icon {
+	margin-left: 10px;
+	font-size: 25px;
+	cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+	.todos-single {
+		width: 40%;
+	}
+}
+
+@media (max-width: 700px) {
+	.input {
+		width: 95%;
+	}
+	.todos {
+		width: 95%;
+	}
+	.todos-single {
+		width: 100%;
+	}
 }
